# ocaml-exercises

./: dune-project
.github/workflows/: ocaml.yml
_build/: .db  .digest-db  log
_build/default/: exercises.dune-package  exercises.install
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/8653ea30d544096511ee14c148ed6e40/: dune__exe___ppx.cmo
_build/default/.ppx/bfcab61e6a21ecf6d2f80029fc1ef484/: dune__exe___ppx.cmi  dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/lib/: at.ml  at.pp.ml  exercises.cma  exercises.cmxa  exercises.cmxs  exercises.ml-gen  last.pp.ml  last_two.pp.ml  length.ml  length.pp.ml
_build/default/lib/.exercises.inline-tests/: partitions-best
_build/default/lib/.exercises.objs/: exercises__At.impl.d  exercises__Last.impl.d  exercises__Last_two.impl.d  exercises__Length.impl.d
_build/default/lib/.exercises.objs/byte/: exercises.cmi  exercises.cmo  exercises.cmt  exercises__At.cmi  exercises__At.cmo  exercises__At.cmt  exercises__Last.cmi  exercises__Last.cmo  exercises__Last.cmt  exercises__Last_two.cmi  exercises__Last_two.cmo  exercises__Last_two.cmt  exercises__Length.cmi  exercises__Length.cmo  exercises__Length.cmt
_build/default/lib/.exercises.objs/native/: exercises.cmx  exercises__At.cmx  exercises__Last.cmx  exercises__Last_two.cmx  exercises__Length.cmx
_build/default/lib/.formatted/: dune  last.ml  last_two.ml
_build/default/lib/.merlin-conf/: lib-exercises
_build/default/test/.merlin-conf/: exe-test_exercises
lib/: dune  last.ml  last_two.ml  length.ml  palimdrome.ml  rev.ml
(+10 files in other folders)
